# django-playground

./: .coderabbit.yaml  .gitignore  conftest.py  pyproject.toml
.gemini/: config.yaml  styleguide.md
.github/workflows/: use-diff-monotor.yml
default/: models.py  serializers.py  tests.py  urls.py  views.py
default/migrations/: 0001_initial.py
playground/: settings.py  urls.py
